--- a/index.html
+++ b/index.html
@@ -1,144 +1,266 @@
-<!DOCTYPE html>
-<html lang="lo" dir="ltr" itemscope itemtype="https://schema.org/ShortStory">
+<!doctype html>
+<html lang="lo" dir="ltr">
   <head>
-    <title>ເກມ ໂຊກິ ຂອງ ມານ ໄດ້</title>
+    <title>ຕຳນານຜີເຜດແຫ່ງຫມາກອູຄິ</title>
 
     <meta charset="UTF-8">
+
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'">
+
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="ພາຍໃຕ້ແສງເດືອນ, ຜີປີສາດໂຄມາຍ້ອງໄດ້ດັກຈັບຜູ້ຫຼິ້ນໂອງິ, ດູດຊຶມເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ສາບແຊ່ງເຂົາເຈົ້າໃຫ້ຕົກເປັນຜີວິນຍານ (yūrei), ປາຖະຫນາຢາກພົບນາງອີກ.">
-    <meta name="keywords" content="ເລື່ອງ, ຜີ, ໂຄມາຍ້ອງ, ໂອບາເກະ, ໂອງິ, ໂຊງິ, ໂຍໄຄ, ຢູເຣ">
-    <meta name="robots" content="index, follow">
+    <meta name="description" content="ເລື່ອງຜີຍີ່ປຸ່ນເລົ່າວ່າມີຜີເຜດຊື່ ໂຄມາຍອ ທີ່ຫຼອກລໍ້ຜູ້ຫຼິ້ນອູຄິໃຫ້ມາຫຼິ້ນໃນຕອນກາງຄືນ, ກ່ອນທີ່ຈະປ່ຽນພວກເຂົາເປັນຜີຕາຍໂຫງ.">
+    <meta name="keywords" content="ໂຄມາຍອ, ຜີເຜດ, ຜີຕາຍໂຫງ, ອູຄິ, ຕຳນານຜີ, ຕຳນານຍີ່ປຸ່ນ, ເລື່ອງຜີ, ເກມໂບຮານ, ກິໂມໂນ, ມົນສະກົດເໜືອທຳມະຊາດ">
+    <meta name="robots" content="index,follow">
     <meta name="author" content="Cyril Veltin">
-    <meta property="og:title" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
-    <meta property="og:type" content="book">
+    <meta name="copyright" content="Cyril Veltin 2023">
+
+    <meta property="og:site_name" content="ໂຄມາຍອ">
+    <meta property="og:locale" content="lo_LA">
+    <meta property="og:title" content="ຕຳນານຜີເຜດແຫ່ງຫມາກອູຄິ">
+    <meta property="og:description" content="ເລື່ອງຜີຍີ່ປຸ່ນເລົ່າວ່າມີຜີເຜດຊື່ ໂຄມາຍອ ທີ່ຫຼອກລໍ້ຜູ້ຫຼິ້ນອູຄິໃຫ້ມາຫຼິ້ນໃນຕອນກາງຄືນ, ກ່ອນທີ່ຈະປ່ຽນພວກເຂົາເປັນຜີຕາຍໂຫງ.">
+    <meta property="og:type" content="book:folklore">
     <meta property="og:url" content="https://lo.komayo.page/">
-    <meta property="og:image" content="https://lo.komayo.page/img/komayo-1024x1024.webp">
-    <meta property="og:description" content="ພາຍໃຕ້ແສງເດືອນ, ຜີປີສາດໂຄມາຍ້ອງໄດ້ດັກຈັບຜູ້ຫຼິ້ນໂອງິ, ດູດຊຶມເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ສາບແຊ່ງເຂົາເຈົ້າໃຫ້ຕົກເປັນຜີວິນຍານ (yūrei), ປາຖະຫນາຢາກພົບນາງອີກ.">
-    <meta itemprop="name" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
-    <meta itemprop="description" content="ພາຍໃຕ້ແສງເດືອນ, ຜີປີສາດໂຄມາຍ້ອງໄດ້ດັກຈັບຜູ້ຫຼິ້ນໂອງິ, ດູດຊຶມເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ສາບແຊ່ງເຂົາເຈົ້າໃຫ້ຕົກເປັນຜີວິນຍານ (yūrei), ປາຖະຫນາຢາກພົບນາງອີກ.">
-    <meta itemprop="image" content="https://lo.komayo.page/img/komayo-1024x1024.webp">
+    <meta property="og:image" content="https://lo.komayo.page/img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_1024.webp">
+    <meta property="og:image:width" content="1024">
+    <meta property="og:image:height" content="1024">
+    <meta property="og:image:alt" content="ຍິງສາວໃສ່ກິໂມໂນພາຍໃຕ້ແສງຈັນເຕັມດວງ, ພາບປະດິດຍີ່ປຸ່ນທັນສະໄໝ">
+    <meta property="og:article:author" content="Cyril Veltin">
+    <meta property="og:article:published_time" content="2023-06-26">
+
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="ເກມ ໂຊກິ ຂອງ ມານ ໄດ້">
-    <meta name="twitter:description" content="ພາຍໃຕ້ແສງເດືອນ, ຜີປີສາດໂຄມາຍ້ອງໄດ້ດັກຈັບຜູ້ຫຼິ້ນໂອງິ, ດູດຊຶມເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ສາບແຊ່ງເຂົາເຈົ້າໃຫ້ຕົກເປັນຜີວິນຍານ (yūrei), ປາຖະຫນາຢາກພົບນາງອີກ.">
-    <meta name="twitter:image" content="https://lo.komayo.page/img/komayo-1024x1024.webp">
+    <meta name="twitter:title" content="ຕຳນານຜີເຜດແຫ່ງຫມາກອູຄິ">
+    <meta name="twitter:description" content="ເລື່ອງຜີຍີ່ປຸ່ນເລົ່າວ່າມີຜີເຜດຊື່ ໂຄມາຍອ ທີ່ຫຼອກລໍ້ຜູ້ຫຼິ້ນອູຄິໃຫ້ມາຫຼິ້ນໃນຕອນກາງຄືນ, ກ່ອນທີ່ຈະປ່ຽນພວກເຂົາເປັນຜີຕາຍໂຫງ.">
+    <meta name="twitter:image" content="https://lo.komayo.page/img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_1024.webp">
 
-      <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
-      <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
-      <link rel="alternate" hreflang="fa" href="https://fa.komayo.page/">
-      <link rel="alternate" hreflang="fr" href="https://fr.komayo.page/">
-      <link rel="alternate" hreflang="gu" href="https://gu.komayo.page/">
-      <link rel="alternate" hreflang="hi" href="https://hi.komayo.page/">
-      <link rel="alternate" hreflang="id" href="https://id.komayo.page/">
-      <link rel="alternate" hreflang="ja" href="https://ja.komayo.page/">
-      <link rel="alternate" hreflang="jv" href="https://jv.komayo.page/">
-      <link rel="alternate" hreflang="kn" href="https://kn.komayo.page/">
-      <link rel="alternate" hreflang="ko" href="https://ko.komayo.page/">
-      <link rel="alternate" hreflang="ml" href="https://ml.komayo.page/">
-      <link rel="alternate" hreflang="mr" href="https://mr.komayo.page/">
-      <link rel="alternate" hreflang="my" href="https://my.komayo.page/">
-      <link rel="alternate" hreflang="or" href="https://or.komayo.page/">
-      <link rel="alternate" hreflang="pa" href="https://pa.komayo.page/">
-      <link rel="alternate" hreflang="ta" href="https://ta.komayo.page/">
-      <link rel="alternate" hreflang="te" href="https://te.komayo.page/">
-      <link rel="alternate" hreflang="th" href="https://th.komayo.page/">
-      <link rel="alternate" hreflang="ur" href="https://ur.komayo.page/">
-      <link rel="alternate" hreflang="vi" href="https://vi.komayo.page/">
-      <link rel="alternate" hreflang="zh" href="https://zh.komayo.page/">
+    <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
+    <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
+    <link rel="alternate" hreflang="fa" href="https://fa.komayo.page/">
+    <link rel="alternate" hreflang="fr" href="https://fr.komayo.page/">
+    <link rel="alternate" hreflang="gu" href="https://gu.komayo.page/">
+    <link rel="alternate" hreflang="hi" href="https://hi.komayo.page/">
+    <link rel="alternate" hreflang="id" href="https://id.komayo.page/">
+    <link rel="alternate" hreflang="ja" href="https://ja.komayo.page/">
+    <link rel="alternate" hreflang="jv" href="https://jv.komayo.page/">
+    <link rel="alternate" hreflang="kn" href="https://kn.komayo.page/">
+    <link rel="alternate" hreflang="ko" href="https://ko.komayo.page/">
+    <link rel="alternate" hreflang="lo" href="https://lo.komayo.page/">
+    <link rel="alternate" hreflang="ml" href="https://ml.komayo.page/">
+    <link rel="alternate" hreflang="mr" href="https://mr.komayo.page/">
+    <link rel="alternate" hreflang="my" href="https://my.komayo.page/">
+    <link rel="alternate" hreflang="or" href="https://or.komayo.page/">
+    <link rel="alternate" hreflang="pa" href="https://pa.komayo.page/">
+    <link rel="alternate" hreflang="ta" href="https://ta.komayo.page/">
+    <link rel="alternate" hreflang="te" href="https://te.komayo.page/">
+    <link rel="alternate" hreflang="th" href="https://th.komayo.page/">
+    <link rel="alternate" hreflang="ur" href="https://ur.komayo.page/">
+    <link rel="alternate" hreflang="vi" href="https://vi.komayo.page/">
+    <link rel="alternate" hreflang="zh" href="https://zh.komayo.page/">
+
     <link rel="canonical" href="https://lo.komayo.page/">
-    <link rel="icon" type="image/svg+xml" sizes="any" href="favicon.svg">
 
-    <style media="screen">
-      @media (prefers-color-scheme: light) {
-        :root {
-          --background-color: white;
-          --color: black;
-          --link-color: #6d071a;
-          --quote-color: #6d071a;
-          --shadow-color: #ccc;
-          --article-title-text-color: #000;
-          --article-title-shadow-color: #ccc;
-        }
-      }
+    <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <meta name="apple-mobile-web-app-title" content="ໂຄມາຍອ">
+    <link rel="manifest" href="/site.webmanifest">
 
-      @media (prefers-color-scheme: dark) {
-        :root {
-          --background-color: black;
-          --color: white;
-          --link-color: #e37f98;
-          --quote-color: #e37f98;
-          --shadow-color: #58354d;
-          --article-title-text-color: #fff;
-          --article-title-shadow-color: #333;
-        }
-      }
-    </style>
-
-    <link rel="stylesheet" href="css/all.css" media="all">
-    <link rel="stylesheet" href="css/print.css" media="print">
-    <link rel="stylesheet" href="css/screen.css" media="screen">
+    <link href="/all.css" rel="stylesheet">
 
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "ShortStory",
-        "mainEntityOfPage": {
-          "@type": "WebPage",
-          "@id": "https://lo.komayo.page/"
+        "@id": "https://lo.komayo.page/",
+        "url": "https://lo.komayo.page/",
+        "@language": "lo",
+        "hasPart": [
+          {
+            "@type": "Game",
+            "headline": "ເກມຂອງເຈົ້າຍິງ",
+            "name": "ເກມ",
+            "@id": "https://ogi.page/",
+            "url": "https://ogi.page/"
+          }
+        ],
+        "keywords": [
+          "ໂຄມາຍອ",
+          "ຜີເຜດ",
+          "ຜີຕາຍໂຫງ",
+          "ອູຄິ",
+          "ຕຳນານຜີ",
+          "ຕຳນານຍີ່ປຸ່ນ",
+          "ເລື່ອງຜີ",
+          "ເກມໂບຮານ",
+          "ກິໂມໂນ",
+          "ມົນສະກົດເໜືອທຳມະຊາດ"
+        ],
+        "timeRequired": "PT4M",
+        "author": {
+          "@type": "Person",
+          "name": "Cyril Veltin"
         },
+        "copyrightHolder": {
+          "@type": "Person",
+          "name": "Cyril Veltin"
+        },
+        "copyrightYear": "2023",
+        "dateModified": "2023-06-26",
+        "datePublished": "2023-06-26",
+        "description": "ເລື່ອງຜີຍີ່ປຸ່ນເລົ່າວ່າມີຜີເຜດຊື່ ໂຄມາຍອ ທີ່ຫຼອກລໍ້ຜູ້ຫຼິ້ນອູຄິໃຫ້ມາຫຼິ້ນໃນຕອນກາງຄືນ, ກ່ອນທີ່ຈະປ່ຽນພວກເຂົາເປັນຜີຕາຍໂຫງ.",
+        "image": {
+          "@type": "ImageObject",
+          "url": "https://lo.komayo.page/img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_1024.webp",
+          "width": "1024",
+          "height": "1024",
+          "caption": "ຍິງສາວໃສ່ກິໂມໂນພາຍໃຕ້ແສງຈັນເຕັມດວງ, ພາບປະດິດຍີ່ປຸ່ນທັນສະໄໝ"
+        },
+        "genre": [
+          "ຕຳນານຜີ",
+          "ຕຳນານຍີ່ປຸ່ນ",
+          "ນິຍາຍແຟນຕາຊີ"
+        ],
+        "inLanguage": "lo",
+        "headline": "ແມ່ມົດແຫ່ງຫມາກອູຄິ",
+        "name": "ເລື່ອງຜີ",
         "publisher": {
           "@type": "Organization",
           "name": "Sashité",
           "url": "https://sashite.com/"
         },
-        "author": {
+        "abstract": "ເລື່ອງຜີຍີ່ປຸ່ນກ່ຽວກັບຜີເຜດທີ່ຫຼອກລໍ້ຜູ້ຫຼິ້ນອູຄິໃນຍາມກາງຄືນ.",
+        "accessMode": ["textual", "visual"],
+        "accessModeSufficient": ["textual"],
+        "character": "ໂຄມາຍອ",
+        "contentLocation": "ແຂວງນະຄອນຣາຊສີມາ, ຍີ່ປຸ່ນ",
+        "isAccessibleForFree": true,
+        "isFamilyFriendly": true,
+        "license": "https://creativecommons.org/licenses/by-nc-nd/4.0/",
+        "sdDatePublished": "2023-06-26",
+        "sdPublisher": {
+          "@type": "Organization",
+          "name": "Sashité"
+        },
+        "teaches": "ຄວາມລະມັດລະວັງຕໍ່ສິ່ງທີ່ບໍ່ຮູ້ຈັກ ແລະ ອັນຕະລາຍຂອງການຫຼົງມົນສະກົດ",
+        "temporal": "ຍຸກປະຈຸບັນ",
+        "text": "ເຂົາເລົ່າວ່າ ຢູ່ແຂວງນະຄອນຣາຊສີມາ, ເມື່ອແສງຈັນເຕັມດວງສ່ອງແສງເງິນລົງມາເທິງທົ່ງນາ, ຜີເຜດທີ່ມີເສນ່ຫາມົນສະກົດຈະປະກົດຕົວ...",
+        "typicalAgeRange": "16+",
+        "about": "ສິ່ງມີຊີວິດໃນຕຳນານຍີ່ປຸ່ນທີ່ກ່ຽວຂ້ອງກັບເກມໂບຮານ",
+        "accessibilityFeature": ["alternativeText", "readingOrder", "structuralNavigation"],
+        "accessibilitySummary": "ຂໍ້ຄວາມທີ່ສາມາດເຂົ້າເຖິງໄດ້ພ້ອມຄຳອະທິບາຍຮູບພາບ ແລະ ການນຳທາງທີ່ມີໂຄງສ້າງ",
+        "accountablePerson": {
           "@type": "Person",
           "name": "Cyril Veltin"
         },
-        "inLanguage": "lo",
-        "headline": "ເກມ ໂຊກິ ຂອງ ມານ ໄດ້",
-        "description": "ພາຍໃຕ້ແສງເດືອນ, ຜີປີສາດໂຄມາຍ້ອງໄດ້ດັກຈັບຜູ້ຫຼິ້ນໂອງິ, ດູດຊຶມເອົາພະລັງຊີວິດຂອງເຂົາເຈົ້າ ແລະ ສາບແຊ່ງເຂົາເຈົ້າໃຫ້ຕົກເປັນຜີວິນຍານ (yūrei), ປາຖະຫນາຢາກພົບນາງອີກ.",
-        "image": "https://lo.komayo.page/img/komayo-1024x1024.webp",
-        "datePublished": "2023-06-26",
-        "dateModified": "2023-06-26",
-        "keywords": "ເລື່ອງ, ຜີ, ໂຄມາຍ້ອງ, ໂອບາເກະ, ໂອງິ, ໂຊງິ, ໂຍໄຄ, ຢູເຣ"
+        "alternativeHeadline": "ຕຳນານຂອງນັກຫຼິ້ນອູຄິ",
+        "audience": {
+          "@type": "Audience",
+          "audienceType": "ຜູ້ສົນໃຈຕຳນານຍີ່ປຸ່ນ"
+        },
+        "educationalLevel": "ສຳລັບທຸກຄົນ",
+        "educationalUse": "ຄວາມບັນເທີງ ແລະ ວັດທະນະທຳ",
+        "fileFormat": "text/html",
+        "interactivityType": "expositive",
+        "learningResourceType": "ການເລົ່າເລື່ອງ",
+        "pattern": "ເລື່ອງຜີຍີ່ປຸ່ນແບບດັ້ງເດີມ",
+        "sourceOrganization": {
+          "@type": "Organization",
+          "name": "Sashité",
+          "url": "https://sashite.com/"
+        },
+        "spatialCoverage": {
+          "@type": "Place",
+          "name": "ແຂວງນະຄອນຣາຊສີມາ, ຍີ່ປຸ່ນ"
+        },
+        "thumbnailUrl": "https://lo.komayo.page/img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_200.webp",
+        "version": "1.0"
       }
     </script>
   </head>
 
   <body>
-    <header>
-      <picture>
-        <source srcset="komayo-light.svg" media="(prefers-color-scheme: light)">
-        <img
-          src="komayo-dark.svg"
-          alt="Komayō"
-          title="ໂຄມາຍ້ອງ"
-          height="22"
-          width="92">
-      </picture>
-    </header>
+    <main>
+      <article itemscope itemtype="https://schema.org/ShortStory">
+        <h1 itemprop="headline">ແມ່ມົດແຫ່ງຫມາກອູຄິ</h1>
 
-    <article>
-  <h1>
-    ນິທານຕົວເມືອງ
-  </h1>
+        <p itemprop="description">
+          ເຂົາເລົ່າວ່າ ຢູ່ແຂວງ <cite itemprop="contentLocation">ນະຄອນຣາຊສີມາ</cite>,
+          ເມື່ອແສງຈັນເຕັມດວງສ່ອງແສງເງິນລົງມາເທິງທົ່ງນາ,
+          ຜີເຜດທີ່ມີເສນ່ຫາມົນສະກົດຈະປະກົດຕົວ, ຊອກຫາຜູ້ເດີນທາງທີ່ຫລົງທາງ.
+        </p>
 
-  <p>ໃນເຂດຊົນນະບົດອັນຫ່າງໄກສອກຫຼີກຂອງປະເທດຍີ່ປຸ່ນ, ມີເລື່ອງເລົ່າກ່ຽວກັບຜູ້ຍິງທີ່ມີຄວາມງາມອັນເປັນຕາຢ້ານທີ່ທ່ຽວໄປມາຢູ່ໃຕ້ແສງເດືອນ. ບາງຄົນ, ດ້ວຍສຽງກະຊິບ, ກ້າທີ່ຈະເອີ້ນນາງວ່າ &quot;ໂຄມາຍ້ອງ&quot;. ບັນດາເລື່ອງລາວທີ່ຫາຍາກກ່ຽວກັບນາງ, ເຕັມໄປດ້ວຍຄວາມລຶກລັບ ແລະ ກ່າວເຖິງຮູບຮ່າງທີ່ສະຫງ່າງາມໃນຊຸດກິໂມໂນສີຟ້າເຂັ້ມ, ປະກົດຕົວຕໍ່ນັກທ່ອງທ່ຽວທີ່ໂດດດ່ຽວ, ຄືກັບວ່າຖືກດຶງດູດໂດຍຄວາມໂດດດ່ຽວຂອງເຂົາເຈົ້າ. ບາງຄົນອ້າງວ່ານາງທ້າທາຍເຂົາເຈົ້າໃຫ້ຫຼິ້ນເກມບູຮານ, ມີກົດລະບຽບທີ່ລືມໄປແລ້ວ, ຄ້າຍຄືກັບໂຊງິ. ມີຄວາມເຊື່ອວ່າຜູ້ທີ່ຍອມຮັບເອົາການເຊື້ອເຊີນນີ້ຈະຖືກພົບເຫັນໃນມື້ຕໍ່ມາ, ໃບຫນ້າຂອງເຂົາເຈົ້າເຢັນເປັນຮອຍຍິ້ມແປກໆ, ມີກະດານເກມຢູ່ຂ້າງໆເຂົາເຈົ້າ, ຈິດໃຈຂອງເຂົາເຈົ້າເບິ່ງຄືວ່າເສຍໄປ, ຖືກກືນກິນດ້ວຍຄວາມລຶກລັບທີ່ບໍ່ສາມາດເຂົ້າໃຈໄດ້.</p>
+        <picture>
+          <img
+            itemprop="image"
+            width="1024"
+            height="1024"
+            sizes="(max-width: 1024px) 100vw, 1024px"
+            srcset="
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_200.webp 200w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_311.webp 311w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_396.webp 396w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_484.webp 484w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_529.webp 529w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_576.webp 576w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_650.webp 650w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_718.webp 718w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_779.webp 779w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_846.webp 846w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_909.webp 909w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_970.webp 970w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_1024.webp 1024w"
+            src="img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_1024.webp"
+            alt="ພາບສິລະປະຂອງຍິງສາວໃນຊຸດກິໂມໂນສີຟ້າກາງຄືນ, ຜົມຍາວສີດໍາ, ຢູ່ໃນປ່າຍາມກາງຄືນພາຍໃຕ້ແສງຈັນເຕັມດວງທີ່ສ່ອງແສງຈ້າ"
+          >
+        </picture>
 
+        <p>
+          ງາມແລະລຶກລັບ,
+          ນຸ່ງກິໂມໂນສີຟ້າກາງຄືນເລິກ,
+          <cite itemprop="character">ໂຄມາຍອ</cite>
+          ຍົວະຜູ້ໂຊກຮ້າຍດ້ວຍເສນ່ຫາທີ່ບໍ່ມີໃຜຕ້ານທານໄດ້ ໂດຍການຊວນຫຼິ້ນ
+          <a href="https://ogi.page/" itemprop="mentions" itemscope itemtype="https://schema.org/Game" rel="external"><strong itemprop="name">ອູຄິ</strong></a>,
+          ເກມໂບຮານທີ່ດັດແປງມາຈາກຫມາກຮຸກໄທ.
+          ຜູ້ທີ່ຮັບຄຳເຊີນຂອງນາງຈະຖືກພັດພາເຂົ້າສູ່ວັງວົນຂອງການເຄື່ອນໄຫວທີ່ບໍ່ມີທາງອອກ.
+        </p>
 
-  <picture>
-    <source type="image/webp" srcset="img/komayo-512x512.webp" media="(max-width: 512px)" height="512" width="512">
-    <source type="image/webp" srcset="img/komayo-1024x1024.webp" media="(min-width: 512px)" height="1024" width="1024">
+        <p>
+          ເຖິງຢ່າງໃດກໍຕາມ,
+          ໃນຂະນະທີ່ເກມດຳເນີນໄປພາຍໃຕ້ຕົ້ນລີລາວະດີ,
+          ຄວາມອິດເມື່ອຍທີ່ບໍ່ຮູ້ຕົວກໍເລີ່ມເຂົ້າຄອບງຳຜູ້ຫຼິ້ນ,
+          ເຮັດໃຫ້ການຕັດສິນໃຈມົວໝອງແລະແຊກຊຶມເຂົ້າໄປໃນກະດູກ,
+          ນຳພາພວກເຂົາໄປສູ່ການນອນຫຼັບທີ່ເລິກເທົ່າກັບນ້ຳຂອງແມ່ນ້ຳຂອງ.
+        </p>
 
-    <img
-      src="img/komayo-1024x1024.jpg"
-      alt="ໂຄມາຍ້ອງຍິ້ມຢູ່ໃກ້ຄູ່ແຂ່ງທີ່ອິດເມື່ອຍຜູ້ທີ່ນອນຫລັບຢູ່ຂ້າງກະດານໂອງິ."
-      title="ເກມໂອງິທີ່ມີສະເໜ່ຂອງໂຄມາຍ້ອງ ແລະ ວົງວຽນແຫ່ງການນອນທີ່ຕ້ານທານບໍ່ໄດ້"
-      height="1024"
-      width="1024">
-  </picture>
-</article>
+        <p>
+          ໃນລະຫວ່າງການນອນຫຼັບອັນເລິກນີ້, ໂຄມາຍອເປີດເຜີຍຕົວຕົນທີ່ແທ້ຈິງຂອງນາງເປັນຜີເຜດ.
+          ນາງດູດເອົາພະລັງຊີວິດຂອງພວກເຂົາ, ປະໄວ້ພຽງແຕ່ຮ່າງທີ່ວ່າງເປົ່າຈາກຄວາມມີຊີວິດຊີວາແຕ່ກ່ອນ.
+          ວິນຍານຂອງຜູ້ເຄາະຮ້າຍເຫຼົ່ານີ້ຖືກປ່ຽນເປັນຜີຕາຍໂຫງ, ວິນຍານຂອງຜູ້ທີ່ຕາຍຢ່າງຮຸນແຮງ, ຖືກສາບໃຫ້ຫຼົງວົນວຽນຕະຫຼອດໄປ.
+          ຖືກຫຼອກຫຼອນດ້ວຍຄວາມຊົງຈຳອັນມົນສະກົດຂອງໂຄມາຍອ ແລະ ທໍລະມານດ້ວຍຄວາມຫວັງທີ່ບໍ່ມີວັນສຳເລັດໃນການສຳເລັດເກມອູຄິ,
+          ພວກເຂົາຫຼົງວົນວຽນຢູ່ໃນທົ່ງນາທີ່ມີໝອກປົກຄຸມຕະຫຼອດການ, ຕິດຢູ່ໃນພາລະກິດທີ່ບໍ່ສຳເລັດ ແລະ ຄວາມຝັນທີ່ແຕກສະຫຼາຍ.
+        </p>
 
+        <p>
+          ເລື່ອງນີ້ມີຕົ້ນກຳເນີດມາຈາກຕຳນານຂອງວັດເກົ່າແກ່ ແລະ ເລື່ອງເລົ່າອັນລຶກລັບຈາກບ້ານຫ່າງໄກ
+          ທີ່ກາຍມາເປັນຄຳເຕືອນກ່ຽວກັບເສນ່ຫາຂອງສິ່ງທີ່ບໍ່ຮູ້ຈັກ ແລະ ການໄລ່ຕາມຄວາມສຸກທີ່ບໍ່ລະມັດລະວັງ.
+          ມັນເປັນຄຳເຕືອນທີ່ກ້ອງກັງວານຜ່ານກາລະເວລາ,
+          ເປັນການເຕືອນເຖິງເສັ້ນບາງໆທີ່ແບ່ງແຍກລະຫວ່າງຄວາມປາຖະໜາ ແລະ ຄວາມພິນາດ.
+        </p>
+      </article>
+    </main>
 
+    <footer>
+      <p>
+        &copy; 2023 Cyril Veltin.
+        ສະຫງວນລິຂະສິດທັງໝົດ.
+        <a title="ປ່ຽນພາສາ" href="https://komayo.page/"><img
+          width="448"
+          height="416"
+          src="/icon/change-language.svg"
+          alt="ເລືອກພາສາ"
+          title="ປ່ຽນພາສາ"
+        ></a>
+      </p>
+    </footer>
   </body>
 </html>
