--- a/index.html
+++ b/index.html
@@ -179,6 +179,19 @@
   </head>
 
   <body>
+    <header>
+      <a href="https://komayo.page/"><img src="/favicon/favicon.svg" alt="ໂຄມາຍອ" width="512" height="512"></a>
+
+      <nav aria-label="breadcrumb">
+        <ol itemscope itemtype="https://schema.org/BreadcrumbList">
+          <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+            <a itemscope itemtype="https://schema.org/ShortStory" itemprop="item" itemid="https://lo.komayo.page/" href="/"><span itemprop="name">ເລື່ອງຜີ</span></a>
+            <meta itemprop="position" content="1">
+          </li>
+        </ol>
+      </nav>
+    </header>
+
     <main>
       <article itemscope itemtype="https://schema.org/ShortStory">
         <h1 itemprop="headline">ແມ່ມົດແຫ່ງຫມາກອູຄິ</h1>
@@ -253,13 +266,6 @@
       <p>
         &copy; 2023 Cyril Veltin.
         ສະຫງວນລິຂະສິດທັງໝົດ.
-        <a title="ປ່ຽນພາສາ" href="https://komayo.page/"><img
-          width="448"
-          height="416"
-          src="/icon/change-language.svg"
-          alt="ເລືອກພາສາ"
-          title="ປ່ຽນພາສາ"
-        ></a>
       </p>
     </footer>
   </body>
