--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     <meta property="og:description" content="ເລື່ອງຜີຍີ່ປຸ່ນເລົ່າວ່າມີຜີເຜດຊື່ ໂຄມາຍອ ທີ່ຫຼອກລໍ້ຜູ້ຫຼິ້ນອູຄິໃຫ້ມາຫຼິ້ນໃນຕອນກາງຄືນ, ກ່ອນທີ່ຈະປ່ຽນພວກເຂົາເປັນຜີຕາຍໂຫງ.">
     <meta property="og:type" content="book:folklore">
     <meta property="og:url" content="https://lo.komayo.page/">
-    <meta property="og:image" content="https://lo.komayo.page/img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_1024.webp">
+    <meta property="og:image" content="https://lo.komayo.page/img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_1024.webp">
     <meta property="og:image:width" content="1024">
     <meta property="og:image:height" content="1024">
-    <meta property="og:image:alt" content="ຍິງສາວໃສ່ກິໂມໂນພາຍໃຕ້ແສງຈັນເຕັມດວງ, ພາບປະດິດຍີ່ປຸ່ນທັນສະໄໝ">
+    <meta property="og:image:alt" content="ພາບແຕ້ມແບບຮ່າງຂອງຍິງສາວງາມໃນຊຸດກິໂມໂນ ຢືນຢູ່ຕາມທາງທີ່ມີແສງຈັນສ່ອງ ທີ່ນະຄອນຣາຊສີມາຍາມກາງຄືນ">
     <meta property="og:article:author" content="Cyril Veltin">
     <meta property="og:article:published_time" content="2023-06-26">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="ຕຳນານຜີເຜດແຫ່ງຫມາກອູຄິ">
     <meta name="twitter:description" content="ເລື່ອງຜີຍີ່ປຸ່ນເລົ່າວ່າມີຜີເຜດຊື່ ໂຄມາຍອ ທີ່ຫຼອກລໍ້ຜູ້ຫຼິ້ນອູຄິໃຫ້ມາຫຼິ້ນໃນຕອນກາງຄືນ, ກ່ອນທີ່ຈະປ່ຽນພວກເຂົາເປັນຜີຕາຍໂຫງ.">
-    <meta name="twitter:image" content="https://lo.komayo.page/img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_1024.webp">
+    <meta name="twitter:image" content="https://lo.komayo.page/img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_1024.webp">
 
     <link rel="alternate" hreflang="bn" href="https://bn.komayo.page/">
     <link rel="alternate" hreflang="en" href="https://en.komayo.page/">
@@ -110,10 +110,10 @@
         "description": "ເລື່ອງຜີຍີ່ປຸ່ນເລົ່າວ່າມີຜີເຜດຊື່ ໂຄມາຍອ ທີ່ຫຼອກລໍ້ຜູ້ຫຼິ້ນອູຄິໃຫ້ມາຫຼິ້ນໃນຕອນກາງຄືນ, ກ່ອນທີ່ຈະປ່ຽນພວກເຂົາເປັນຜີຕາຍໂຫງ.",
         "image": {
           "@type": "ImageObject",
-          "url": "https://lo.komayo.page/img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_1024.webp",
+          "url": "https://lo.komayo.page/img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_1024.webp",
           "width": "1024",
           "height": "1024",
-          "caption": "ຍິງສາວໃສ່ກິໂມໂນພາຍໃຕ້ແສງຈັນເຕັມດວງ, ພາບປະດິດຍີ່ປຸ່ນທັນສະໄໝ"
+          "caption": "ພາບແຕ້ມແບບຮ່າງຂອງຍິງສາວງາມໃນຊຸດກິໂມໂນ ຢືນຢູ່ຕາມທາງທີ່ມີແສງຈັນສ່ອງ ທີ່ນະຄອນຣາຊສີມາຍາມກາງຄືນ"
         },
         "genre": [
           "ຕຳນານຜີ",
@@ -172,7 +172,7 @@
           "@type": "Place",
           "name": "ແຂວງນະຄອນຣາຊສີມາ, ຍີ່ປຸ່ນ"
         },
-        "thumbnailUrl": "https://lo.komayo.page/img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_200.webp",
+        "thumbnailUrl": "https://lo.komayo.page/img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_200.webp",
         "version": "1.0"
       }
     </script>
@@ -209,21 +209,21 @@
             height="1024"
             sizes="(max-width: 1024px) 100vw, 1024px"
             srcset="
-              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_200.webp 200w,
-              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_311.webp 311w,
-              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_396.webp 396w,
-              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_484.webp 484w,
-              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_529.webp 529w,
-              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_576.webp 576w,
-              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_650.webp 650w,
-              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_718.webp 718w,
-              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_779.webp 779w,
-              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_846.webp 846w,
-              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_909.webp 909w,
-              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_970.webp 970w,
-              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_1024.webp 1024w"
-            src="img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch_u0drax_c_scale,w_1024.webp"
-            alt="ພາບສິລະປະຂອງຍິງສາວໃນຊຸດກິໂມໂນສີຟ້າກາງຄືນ, ຜົມຍາວສີດໍາ, ຢູ່ໃນປ່າຍາມກາງຄືນພາຍໃຕ້ແສງຈັນເຕັມດວງທີ່ສ່ອງແສງຈ້າ"
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_200.webp 200w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_311.webp 311w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_396.webp 396w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_484.webp 484w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_529.webp 529w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_576.webp 576w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_650.webp 650w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_718.webp 718w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_779.webp 779w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_846.webp 846w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_909.webp 909w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_970.webp 970w,
+              img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_1024.webp 1024w"
+            src="img/beautiful-woman-kimono-moonlit-path-nakhon-ratchasima-night-sketch,w_1024.webp"
+            alt="ພາບແຕ້ມແບບຮ່າງຂອງຍິງສາວງາມໃນຊຸດກິໂມໂນ ຢືນຢູ່ຕາມທາງທີ່ມີແສງຈັນສ່ອງ ທີ່ນະຄອນຣາຊສີມາຍາມກາງຄືນ"
           >
         </picture>
 
